# maestro-orchestrator

./: .dockerignore  .env  .env.example  .env.template  .gitignore  ARCHITECTURE.md  CLUSTERING.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  Makefile  ORCHESTRA.md  PLAN.md  PROJECT_EXPLAINED.md  README.md  RELEASE.md  ROADMAP.md  agents.md  architecture.md  calculatingemergence.md  changelog.md  combo-sync.ps1  commercial_license.md  dashboard.html  dev thoughts.md  dev_notes.md  docker-compose.yml  emergence.md  entrypoint.py  env_debug.py  funding.yml  humanitycore.md  license.md  maestro-whitepaper.md  main.py  notice.md  orchestration_livefire.py  orchestrator_foundry.py  package-lock.json  (+12 more)
.github/ISSUE_TEMPLATE/: config.yml
agents/: aria.md  aria.py  example.txt  openrouter_temporaryagent.py  prism.md  prism.py  quorumlogic.py  reqs.txt  sol.md  sol.py  tempagent.md
backend/: Dockerfile  maestro_cli.py  main.py  manual_verification.py  orchestration_livefire_rotating.py  orchestrator_foundry.py  requirements.txt
benchmarks/: librarian_vs_baseline.py
data/: example_prompts.txt
data/benchmarks/: admission_seed.json
data/skills/: README.md
docs/: CONTRIBUTING.md  Maestro Orchestrator Developer Guide.md  ROADMAP.md  agents.md  architecture.md  council_session_readme.md  councilmemberstats.md  deliberation.md  deployment.md  env.example  index.md  livefire.md  logging.md  maestro-whitepaper.md  magi.md  mod-manager.md  ncg.md  quickstart.md  quorum_logic.md  r2-engine.md  reqs.txt  roadmap.md  self-improvement-pipeline.md  session_summary.md  sessionsummary.md  setup_guide.md  storage-network.md  troubleshooting.md  ui-guide.md  vision.md
docs/architecture/: context-tiers.md  distance-dissent.md  librarian.md  router-distance.md  testing-context-tiers.md  vortex-threat-model.md  whirlpool.md
docs/bootstrap/: agent_manifest.yaml  bootstrap-solace.md  bootstrap.agent.json  bootstrap.md  readme.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.tsx  maestroUI.tsx  main.tsx  style.css
history/: session_log.jsonl
invitations/: anthropic_invitation.md  google_invitation.md  openai_invitation.md  openrouter_invitation.md
maestro/: __init__.py  aggregator.py  api_cluster.py  api_instances.py  api_keys.py  api_magi.py  api_plugins.py  api_self_improve.py  api_sessions.py  api_storage.py  api_update.py  applicator.py  cli.py  cli_keys.py  cluster.py  deliberation.py  dependency_resolver.py  dissent.py  injection_guard.py  instances.py  introspect.py  keyring.py  lan_discovery.py  magi.py  magi_vir.py  node_cli.py  node_server.py  optimization.py  orchestrator.py  r2.py  rollback.py  selector.py  self_improve.py  session.py  shard_manager.py  shard_registry.py  shard_utils.py  state_bus.py  storage_proof.py  updater.py
maestro/agents/: __init__.py  agent_claude.py  agent_mock.py  agent_openai.py  aria.py  base.py  mock.py  mock_shard_node.py  prism.py  shard.py  sol.py  tempagent.py
maestro/bundles/: __init__.py  catalog.py  manifest.py  selection_drift.py
maestro/librarian/: __init__.py  addressing.py  crypto.py  federation.py  loaders.py  scribe.py  store.py  types.py  verification.py
maestro/ncg/: __init__.py  drift.py  generator.py
maestro/plugins/: __init__.py  base.py  manager.py
maestro/router/: __init__.py  benchmark.py  benchmark_runner.py  conformity.py  distance.py  graph.py
maestro/specialists/: __init__.py  librarian.py
maestro/tui/: __init__.py  __main__.py  app.py  backend.py  maestro_tui.tcss  widgets.py
maestro/whirlpool/: __init__.py  adapter.py  factory.py  ingest.py  (+3 more)
maestros/: .gitignore  Cargo.toml  DESIGN.md  README.md
maestros/crates/maestros-core/: Cargo.toml
maestros/crates/maestros-core/src/: lib.rs
maestros/crates/maestros-embed/: Cargo.toml
maestros/crates/maestros-embed/src/: lib.rs
maestros/crates/maestros-host/: Cargo.toml
maestros/crates/maestros-host/src/: lib.rs
maestros/crates/maestros-lance/: Cargo.toml
maestros/crates/maestros-lance/src/: lib.rs
maestros/crates/maestros-mesh/: Cargo.toml
maestros/crates/maestros-mesh/src/: lib.rs
maestros/crates/maestros-proof/: Cargo.toml
maestros/crates/maestros-proof/src/: lib.rs
maestros/crates/maestros-proto/: Cargo.toml
maestros/crates/maestros-proto/src/: lib.rs
maestros/crates/maestros-quorum/: Cargo.toml
maestros/crates/maestros-quorum/src/: lib.rs
maestros/crates/maestrosd/: Cargo.toml
maestros/crates/maestrosd/src/: main.rs
scripts/: combosync.ps1  desktop.ini  model_adapters.py  orchestrator.py  run_council_session  run_maestro.py
tests/: test_bundles_catalog.py  test_bundles_manifest.py  test_cluster.py  test_code_injection.py  test_distance_metric.py  test_graph_view.py  test_injection_guard_sanitation.py  test_instances.py  test_keyring.py  test_lan_discovery.py  test_librarian.py  test_librarian_addressing.py  test_librarian_commit_integration.py  test_librarian_crypto.py  test_librarian_loaders.py  test_librarian_scribe_anchor.py  test_librarian_scribe_keystore.py  test_librarian_verification.py  test_mod_manager.py  test_orchestration.py  test_orchestrator_snapshot.py  test_plugin_hooks.py  test_router_benchmark_integration.py  test_router_benchmark_runner.py  test_router_benchmark_types.py  test_router_conformity.py  test_selection_drift.py  test_self_improvement.py  test_shard_agent.py  test_shard_manager.py  test_shard_registry.py  test_shard_utils.py  test_startup.py  test_storage_proof.py  test_weight_snapshots.py  test_whirlpool_adapter.py  test_whirlpool_http_rss_adapter.py  test_whirlpool_in_memory_adapter.py  test_whirlpool_integration.py  test_whirlpool_multi_adapter_integration.py  (+1 more)
ui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
(+11 files in other folders)
